<resources>
    <string name="app_name">MoviesImdb</string>
    <string name="ic_search">Search…</string>
    <string name="descrition_movie_image">Image of an movie</string>
    <string name="detail_backdrop_image">Image movie</string>
    <string name="cast">Cast</string>
    <string name="trailers">Trailers</string>
    <string name="adult">adult: %1$s</string>
    <string name="rating">rating: %1$s/10</string>
    <string name="votes">votes: %1$s</string>
    <string name="overview">OVERVIEW</string>
    <string name="cast_image">Cast Image</string>
</resources>
