<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:fitsSystemWindows="true"
    tools:context=".view.activity.MovieDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/activity_detail_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/activity_detail_collapsing_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:contentScrim="?colorPrimary"
            app:title=" ">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/detail_backdrop_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.6"
                    android:contentDescription="@string/detail_backdrop_image"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@color/gray"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.cardview.widget.CardView
                    android:id="@+id/activity_detail_toolbar_card"
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:theme="@style/CardView.Light"
                    app:cardCornerRadius="6dp"
                    app:cardUseCompatPadding="true">

                    <ImageView
                        android:id="@+id/detail_poster_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:fontFamily="@font/opensans_semibold"
                    android:id="@+id/detail_movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/activity_detail_toolbar_card"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="34dp"
                    android:layout_toEndOf="@+id/activity_detail_toolbar_card"
                    android:maxLength="400"
                    android:maxLines="2"
                    android:text="Maze Runner"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/detail_movie_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/detail_movie_title"
                    android:layout_below="@+id/detail_movie_title"
                    android:maxLength="400"
                    android:maxLines="2"
                    android:text="12 July, 2018"
                    android:textColor="@color/white"
                    android:textSize="12sp" />


                <CheckBox
                    android:id="@+id/add_to_favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_margin="16dp"
                    android:button="@null"
                    android:checked="false"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/ic_thumb_up_outline_white_24dp"
                    android:stateListAnimator="@animator/scale"
                    app:layout_constraintLeft_toLeftOf="parent" />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/activity_detail_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:backgroundTint="@color/colorPrimary"
                android:contentInsetLeft="0dp"
                android:contentInsetStart="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin"
                app:title=" ">
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                app:layout_constraintBottom_toTopOf="@+id/activity_detail_ratings_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />

            <LinearLayout
                android:id="@+id/activity_detail_ratings_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:weightSum="3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/detail_adult"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_round"
                    android:gravity="center"
                    android:text="@string/adult" />

                <TextView
                    android:id="@+id/detail_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_round"
                    android:gravity="center"
                    android:text="@string/rating" />

                <TextView
                    android:id="@+id/detail_vote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_round"
                    android:gravity="center"
                    android:text="@string/votes" />

            </LinearLayout>
            <View
                app:layout_constraintTop_toBottomOf="@+id/activity_detail_ratings_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />

            <TextView
                android:id="@+id/detail_overview_text"
                android:layout_width="match_parent"
                android:background="@color/gray"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="bottom"
                android:text="@string/overview"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_detail_ratings_linear_layout"
                tools:layout_editor_absoluteY="50dp" />


            <LinearLayout
                android:id="@+id/activity_detail_overview_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:orientation="vertical"
                android:showDividers="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_overview_text">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />

                <LinearLayout
                    android:id="@+id/detail_movie_time_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_movie_run_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/open_sans_regular"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="22sp"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp" />

                    <TextView
                        android:id="@+id/activity_detail_movie_budget"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/open_sans_regular" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />

                <TextView
                    android:id="@+id/detail_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    android:scrollbars="vertical"
                    android:textAlignment="textStart" />

                <TextView
                    android:id="@+id/detail_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/open_sans_regular"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textAlignment="textEnd"
                    android:textColor="@color/gray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />

                <RatingBar
                    android:id="@+id/detail_rating_bar"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:rating="4" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />
            </LinearLayout>

           <!-- <TextView
                android:id="@+id/activity_detail_cast_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="bottom"
                android:text="@string/cast"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_detail_overview_linear_layout" />

            <RelativeLayout
                android:layout_marginTop="4dp"
                android:id="@+id/activity_detail_cast_relative_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_detail_cast_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_above="@+id/activity_detail_cast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_toStartOf="@+id/activity_detail_cast_progress_bar"
                    android:id="@+id/activity_detail_cast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </androidx.recyclerview.widget.RecyclerView>
                <ProgressBar
                    android:indeterminate="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/activity_detail_cast_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_below="@+id/activity_detail_cast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/activity_detail_trailer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/opensans_semibold"
                android:gravity="bottom"
                android:text="@string/trailers"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_detail_cast_relative_layout" />

            <RelativeLayout
                android:layout_marginTop="4dp"
                android:id="@+id/activity_detail_trailer_relative_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/activity_detail_trailer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_above="@+id/activity_detail_trailer_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_toStartOf="@+id/activity_detail_trailer_progress_bar"
                    android:id="@+id/activity_detail_trailer_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </androidx.recyclerview.widget.RecyclerView>
                <ProgressBar
                    android:indeterminate="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/activity_detail_trailer_progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_above="@+id/activity_detail_trailer_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"/>
            </RelativeLayout>-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>